Add @vercel/og for share-story image generation

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
+    "@vercel/og": "^0.8.5",
     "next": "^16.0.7",
     "openai": "^6.10.0",
     "pdf-lib": "^1.17.1",
